[package]
name = "dlpipeline"
version = "0.1.0"
authors = ["SunDoge <384813529@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tch = {git = "https://github.com/LaurentMazare/tch-rs"}
tch = "0.1.7"
rayon = "1.3.0"